# yatq

./: .gitignore  CMakeLists.txt  README.md  log4cxx.xml
bindings/python/: MANIFEST.in  README_pytq.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
bindings/python/_yatq/: bind.cpp  traits.h
bindings/python/_yatq/include/yatq/: thread_pool.h  timer_queue.h  version.h
bindings/python/_yatq/include/yatq/internal/: promise_utils.h
bindings/python/_yatq/include/yatq/utils/: sched_utils.h
bindings/python/pytq/: __init__.py  awaitable_future.py  pythonize.py
bindings/python/setup_helpers/: find_dep_headers.cmake  find_dep_libs.cmake  ugly.py
doc/: doxygen.cfg  footer_awesome.html
doc/html/: annotated.html  classes.html  classyatq_1_1_thread_pool-members.html  classyatq_1_1_thread_pool.html  classyatq_1_1_timer_queue-members.html  classyatq_1_1_timer_queue.html  concepts.html  concepts_8h_source.html  conceptyatq_1_1internal_1_1_chainable_future_generic.html  conceptyatq_1_1internal_1_1_clock_generic.html  conceptyatq_1_1internal_1_1_executable_generic.html  conceptyatq_1_1internal_1_1_executor_generic.html  dir_11232f49abc08a49273fdea85ac7ba64.html  dir_14198dcbfe25ed061021436b0cee8f22.html  dir_a5d998c856e0c70e7d3f5fdeda108fb0.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  log4cxx__proxy_8h_source.html  logging__utils_8h_source.html  menudata.js  promise__utils_8h_source.html  sched__utils_8h_source.html  structyatq_1_1_timer_queue_1_1_timer_handle-members.html  structyatq_1_1_timer_queue_1_1_timer_handle.html  thread__pool_8h_source.html  timer__queue_8h_source.html  version_8h_source.html
doc/html/search/: all_1.js  all_3.js  all_5.js  all_7.js  classes_0.js  concepts_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_2.js
examples/: pytq_example.py  yatq_example.cpp
include/yatq/: thread_pool.h  timer_queue.h  version.h
include/yatq/internal/: concepts.h  log4cxx_proxy.h  promise_utils.h
include/yatq/utils/: logging_utils.h  sched_utils.h
tests/precision/: delay_histogram.ipynb  test_precision.cpp  test_wait_until.cpp
tests/profiling/: test_bde.cpp  test_load.cpp
tests/python/: conftest.py  test_awaitable_future.py  test_future.py  test_pythonize.py  test_thread_pool.py  test_timer_queue.py
