[build-system]
requires = ["setuptools >= 65.0.0", "pybind11 >= 2.13.6", "wheel >= 0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytq-cxx"
version = "1.1.0"
authors = [{name="Nikita Vaganov", email="nikita.e.vaganov@gmail.com"}]
description = "single-threaded timer demultiplexer backed by C++ implementation"
readme = "README_pytq.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/vaganov/yatq"
"Bug Tracker" = "https://github.com/vaganov/yatq/issues"
