[metadata]
name = pytq
# version = attr: pytq.__version__
version = 1.0.0
author = Nikita Vaganov
author_email = nikita.e.vaganov@gmail.com
url = https://github.com/vaganov/yatq
description = single-threaded timer demultiplexer backed by C++ implementation
keywords = timer queue, thread pool
license = LGPL v3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

[options]
python_requires = >=3.7

[build-system]
requires = ["setuptools >= 68.0.0", "pybind >= 2.13.6"]
